# sourcery-tutorial-introduction

./: .gitignore  README.md  pyproject.toml
sourcery_tutorial_introduction/: __main__.py  playlist.py  tracks.py
tests/: test_sourcery_tutorial_introduction.py
