[tool.poetry]
name = "sourcery_tutorial_introduction"
version = "0.1.0"
description = ""
authors = ["Ben <ben@sourcery.ai>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
